--- a/work1/index.html
+++ b/work1/index.html
@@ -6,6 +6,6 @@
     <script>
         alert('刘岩的第一个网页程序')
     </script>
-    <a href="javascript;alert('hello');">test</a>
+    <a href="javascript:alert('hello');">test</a>
 </body>
 </html>
