--- a/work4/index.html
+++ b/work4/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>l刘岩的 《javascript web前端》课程作业</title>
-    </head>
+    <meta charset="utf-8">
+    <title>刘岩的流程控制程序</title>
     <body>
-        <p>刘岩的 《javascript web前端》课程作业</p>
-        <a href='work1/index.html'>work1 开发环境安装</a><br>
-        <a href='work2/index.html'>work2 简单网页任务</a><br>
-        <a href='work2/index.html'>work2-1</a><br>
-        <a href='work3/index.html'>work3 js基本语法</a><br>
-        <a href='work4/index.html'>work4 js流程控制</a><br>
-        持续更新中。。。。。。
-
-    </body>
+        <p>九九乘法表</p>
+        <div id='table'></div>
+        <script src="work4.js"></script>
+    </body>  
 </html>
